src/test/ui/parser/attr-bad-meta-3.rs
// compile-flags: -Z parse-only

#[path() token] //~ ERROR expected `]`, found `token`
mod m {}
